exports[`ToolTip [common] example testing should match snapshot for 1.interactive 1`] = `
<section
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
    }
  }>
  <section
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "flexGrow": 1,
      }
    }>
    <section
      style={
        Object {
          "margin": "30px",
        }
      }>
      <ToolTip
        alignment="start"
        direction="right">
        <ToolTip.Title>
          Title: 
          right
           
          start
        </ToolTip.Title>
        <ToolTip.Body>
          ToolTip is a utility component to create a transient message anchored to another component. My direction is \"
          right
          \". My alignment is \"
          start
          \".
        </ToolTip.Body>
        <ToolTip.Target>
          <div>
            Target 
            right
             
            start
          </div>
        </ToolTip.Target>
      </ToolTip>
    </section>
    <section
      style={
        Object {
          "margin": "30px",
        }
      }>
      <ToolTip
        alignment="center"
        direction="right">
        <ToolTip.Title>
          Title: 
          right
           
          center
        </ToolTip.Title>
        <ToolTip.Body>
          ToolTip is a utility component to create a transient message anchored to another component. My direction is \"
          right
          \". My alignment is \"
          center
          \".
        </ToolTip.Body>
        <ToolTip.Target>
          <div>
            Target 
            right
             
            center
          </div>
        </ToolTip.Target>
      </ToolTip>
    </section>
    <section
      style={
        Object {
          "margin": "30px",
        }
      }>
      <ToolTip
        alignment="end"
        direction="right">
        <ToolTip.Title>
          Title: 
          right
           
          end
        </ToolTip.Title>
        <ToolTip.Body>
          ToolTip is a utility component to create a transient message anchored to another component. My direction is \"
          right
          \". My alignment is \"
          end
          \".
        </ToolTip.Body>
        <ToolTip.Target>
          <div>
            Target 
            right
             
            end
          </div>
        </ToolTip.Target>
      </ToolTip>
    </section>
  </section>
  <section
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "flexGrow": 1,
      }
    }>
    <section
      style={
        Object {
          "margin": "30px",
        }
      }>
      <ToolTip
        alignment="start"
        direction="up">
        <ToolTip.Title>
          Title: 
          up
           
          start
        </ToolTip.Title>
        <ToolTip.Body>
          ToolTip is a utility component to create a transient message anchored to another component. My direction is \"
          up
          \". My alignment is \"
          start
          \".
        </ToolTip.Body>
        <ToolTip.Target>
          <div>
            Target 
            up
             
            start
          </div>
        </ToolTip.Target>
      </ToolTip>
    </section>
    <section
      style={
        Object {
          "margin": "30px",
        }
      }>
      <ToolTip
        alignment="center"
        direction="up">
        <ToolTip.Title>
          Title: 
          up
           
          center
        </ToolTip.Title>
        <ToolTip.Body>
          ToolTip is a utility component to create a transient message anchored to another component. My direction is \"
          up
          \". My alignment is \"
          center
          \".
        </ToolTip.Body>
        <ToolTip.Target>
          <div>
            Target 
            up
             
            center
          </div>
        </ToolTip.Target>
      </ToolTip>
    </section>
    <section
      style={
        Object {
          "margin": "30px",
        }
      }>
      <ToolTip
        alignment="end"
        direction="up">
        <ToolTip.Title>
          Title: 
          up
           
          end
        </ToolTip.Title>
        <ToolTip.Body>
          ToolTip is a utility component to create a transient message anchored to another component. My direction is \"
          up
          \". My alignment is \"
          end
          \".
        </ToolTip.Body>
        <ToolTip.Target>
          <div>
            Target 
            up
             
            end
          </div>
        </ToolTip.Target>
      </ToolTip>
    </section>
  </section>
  <section
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "flexGrow": 1,
      }
    }>
    <section
      style={
        Object {
          "margin": "30px",
        }
      }>
      <ToolTip
        alignment="start"
        direction="down">
        <ToolTip.Title>
          Title: 
          down
           
          start
        </ToolTip.Title>
        <ToolTip.Body>
          ToolTip is a utility component to create a transient message anchored to another component. My direction is \"
          down
          \". My alignment is \"
          start
          \".
        </ToolTip.Body>
        <ToolTip.Target>
          <div>
            Target 
            down
             
            start
          </div>
        </ToolTip.Target>
      </ToolTip>
    </section>
    <section
      style={
        Object {
          "margin": "30px",
        }
      }>
      <ToolTip
        alignment="center"
        direction="down">
        <ToolTip.Title>
          Title: 
          down
           
          center
        </ToolTip.Title>
        <ToolTip.Body>
          ToolTip is a utility component to create a transient message anchored to another component. My direction is \"
          down
          \". My alignment is \"
          center
          \".
        </ToolTip.Body>
        <ToolTip.Target>
          <div>
            Target 
            down
             
            center
          </div>
        </ToolTip.Target>
      </ToolTip>
    </section>
    <section
      style={
        Object {
          "margin": "30px",
        }
      }>
      <ToolTip
        alignment="end"
        direction="down">
        <ToolTip.Title>
          Title: 
          down
           
          end
        </ToolTip.Title>
        <ToolTip.Body>
          ToolTip is a utility component to create a transient message anchored to another component. My direction is \"
          down
          \". My alignment is \"
          end
          \".
        </ToolTip.Body>
        <ToolTip.Target>
          <div>
            Target 
            down
             
            end
          </div>
        </ToolTip.Target>
      </ToolTip>
    </section>
  </section>
  <section
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "flexGrow": 1,
      }
    }>
    <section
      style={
        Object {
          "margin": "30px",
        }
      }>
      <ToolTip
        alignment="start"
        direction="left">
        <ToolTip.Title>
          Title: 
          left
           
          start
        </ToolTip.Title>
        <ToolTip.Body>
          ToolTip is a utility component to create a transient message anchored to another component. My direction is \"
          left
          \". My alignment is \"
          start
          \".
        </ToolTip.Body>
        <ToolTip.Target>
          <div>
            Target 
            left
             
            start
          </div>
        </ToolTip.Target>
      </ToolTip>
    </section>
    <section
      style={
        Object {
          "margin": "30px",
        }
      }>
      <ToolTip
        alignment="center"
        direction="left">
        <ToolTip.Title>
          Title: 
          left
           
          center
        </ToolTip.Title>
        <ToolTip.Body>
          ToolTip is a utility component to create a transient message anchored to another component. My direction is \"
          left
          \". My alignment is \"
          center
          \".
        </ToolTip.Body>
        <ToolTip.Target>
          <div>
            Target 
            left
             
            center
          </div>
        </ToolTip.Target>
      </ToolTip>
    </section>
    <section
      style={
        Object {
          "margin": "30px",
        }
      }>
      <ToolTip
        alignment="end"
        direction="left">
        <ToolTip.Title>
          Title: 
          left
           
          end
        </ToolTip.Title>
        <ToolTip.Body>
          ToolTip is a utility component to create a transient message anchored to another component. My direction is \"
          left
          \". My alignment is \"
          end
          \".
        </ToolTip.Body>
        <ToolTip.Target>
          <div>
            Target 
            left
             
            end
          </div>
        </ToolTip.Target>
      </ToolTip>
    </section>
  </section>
</section>
`;

exports[`ToolTip [common] example testing should match snapshot for 2.close-button 1`] = `
<section
  style={
    Object {
      "marginBottom": 60,
      "marginTop": 60,
    }
  }>
  <ToolTip
    alignment="center"
    direction="right"
    flyOutStyle={Object {}}
    isCloseable={true}
    isExpanded={true}
    kind="default"
    onClose={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    portalId={null}>
    <ToolTip.Title>
      Title
    </ToolTip.Title>
    <ToolTip.Body>
      ToolTip is a utility component to create a transient message anchored to another component.
    </ToolTip.Body>
    <ToolTip.Target>
      <div>
        Target
      </div>
    </ToolTip.Target>
  </ToolTip>
</section>
`;

exports[`ToolTip [common] example testing should match snapshot for 3.variants 1`] = `
<section
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }>
  <section
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-around",
        "marginTop": 150,
      }
    }>
    <ToolTip
      alignment="center"
      direction="up"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={true}
      kind="primary"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}>
      <ToolTip.Title>
        Primary
      </ToolTip.Title>
      <ToolTip.Body>
        ToolTip is a utility component to create a transient message anchored to another component.
      </ToolTip.Body>
      <ToolTip.Target>
        <div>
          Target for 
          primary
        </div>
      </ToolTip.Target>
    </ToolTip>
    <ToolTip
      alignment="center"
      direction="up"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={true}
      kind="success"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}>
      <ToolTip.Title>
        Success
      </ToolTip.Title>
      <ToolTip.Body>
        ToolTip is a utility component to create a transient message anchored to another component.
      </ToolTip.Body>
      <ToolTip.Target>
        <div>
          Target for 
          success
        </div>
      </ToolTip.Target>
    </ToolTip>
    <ToolTip
      alignment="center"
      direction="up"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={true}
      kind="warning"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}>
      <ToolTip.Title>
        Warning
      </ToolTip.Title>
      <ToolTip.Body>
        ToolTip is a utility component to create a transient message anchored to another component.
      </ToolTip.Body>
      <ToolTip.Target>
        <div>
          Target for 
          warning
        </div>
      </ToolTip.Target>
    </ToolTip>
  </section>
  <section
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-around",
        "marginTop": 150,
      }
    }>
    <ToolTip
      alignment="center"
      direction="up"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={true}
      kind="danger"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}>
      <ToolTip.Title>
        Danger
      </ToolTip.Title>
      <ToolTip.Body>
        ToolTip is a utility component to create a transient message anchored to another component.
      </ToolTip.Body>
      <ToolTip.Target>
        <div>
          Target for 
          danger
        </div>
      </ToolTip.Target>
    </ToolTip>
    <ToolTip
      alignment="center"
      direction="up"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={true}
      kind="info"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}>
      <ToolTip.Title>
        Info
      </ToolTip.Title>
      <ToolTip.Body>
        ToolTip is a utility component to create a transient message anchored to another component.
      </ToolTip.Body>
      <ToolTip.Target>
        <div>
          Target for 
          info
        </div>
      </ToolTip.Target>
    </ToolTip>
    <ToolTip
      alignment="center"
      direction="up"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={true}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}>
      <ToolTip.Title>
        Default
      </ToolTip.Title>
      <ToolTip.Body>
        ToolTip is a utility component to create a transient message anchored to another component.
      </ToolTip.Body>
      <ToolTip.Target>
        <div>
          Target for 
          default
        </div>
      </ToolTip.Target>
    </ToolTip>
  </section>
</section>
`;

exports[`ToolTip [common] example testing should match snapshot for 4.static 1`] = `
<section
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
    }
  }>
  <section
    style={
      Object {
        "margin": "90px",
      }
    }>
    <ToolTip
      alignment="start"
      direction="right"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={true}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}>
      <ToolTip.Title>
        Title: 
        right
         
        start
      </ToolTip.Title>
      <ToolTip.Body>
        ToolTip is a utility component to create a transient message anchored to another component. My direction is \"
        right
        \". My alignment is \"
        start
        \".
      </ToolTip.Body>
      <ToolTip.Target>
        <div>
          Target 
          right
           
          start
        </div>
      </ToolTip.Target>
    </ToolTip>
  </section>
  <section
    style={
      Object {
        "margin": "90px",
      }
    }>
    <ToolTip
      alignment="center"
      direction="right"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={true}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}>
      <ToolTip.Title>
        Title: 
        right
         
        center
      </ToolTip.Title>
      <ToolTip.Body>
        ToolTip is a utility component to create a transient message anchored to another component. My direction is \"
        right
        \". My alignment is \"
        center
        \".
      </ToolTip.Body>
      <ToolTip.Target>
        <div>
          Target 
          right
           
          center
        </div>
      </ToolTip.Target>
    </ToolTip>
  </section>
  <section
    style={
      Object {
        "margin": "90px",
      }
    }>
    <ToolTip
      alignment="end"
      direction="right"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={true}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}>
      <ToolTip.Title>
        Title: 
        right
         
        end
      </ToolTip.Title>
      <ToolTip.Body>
        ToolTip is a utility component to create a transient message anchored to another component. My direction is \"
        right
        \". My alignment is \"
        end
        \".
      </ToolTip.Body>
      <ToolTip.Target>
        <div>
          Target 
          right
           
          end
        </div>
      </ToolTip.Target>
    </ToolTip>
  </section>
  <section
    style={
      Object {
        "margin": "90px",
      }
    }>
    <ToolTip
      alignment="start"
      direction="up"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={true}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}>
      <ToolTip.Title>
        Title: 
        up
         
        start
      </ToolTip.Title>
      <ToolTip.Body>
        ToolTip is a utility component to create a transient message anchored to another component. My direction is \"
        up
        \". My alignment is \"
        start
        \".
      </ToolTip.Body>
      <ToolTip.Target>
        <div>
          Target 
          up
           
          start
        </div>
      </ToolTip.Target>
    </ToolTip>
  </section>
  <section
    style={
      Object {
        "margin": "90px",
      }
    }>
    <ToolTip
      alignment="center"
      direction="up"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={true}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}>
      <ToolTip.Title>
        Title: 
        up
         
        center
      </ToolTip.Title>
      <ToolTip.Body>
        ToolTip is a utility component to create a transient message anchored to another component. My direction is \"
        up
        \". My alignment is \"
        center
        \".
      </ToolTip.Body>
      <ToolTip.Target>
        <div>
          Target 
          up
           
          center
        </div>
      </ToolTip.Target>
    </ToolTip>
  </section>
  <section
    style={
      Object {
        "margin": "90px",
      }
    }>
    <ToolTip
      alignment="end"
      direction="up"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={true}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}>
      <ToolTip.Title>
        Title: 
        up
         
        end
      </ToolTip.Title>
      <ToolTip.Body>
        ToolTip is a utility component to create a transient message anchored to another component. My direction is \"
        up
        \". My alignment is \"
        end
        \".
      </ToolTip.Body>
      <ToolTip.Target>
        <div>
          Target 
          up
           
          end
        </div>
      </ToolTip.Target>
    </ToolTip>
  </section>
  <section
    style={
      Object {
        "margin": "90px",
      }
    }>
    <ToolTip
      alignment="start"
      direction="down"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={true}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}>
      <ToolTip.Title>
        Title: 
        down
         
        start
      </ToolTip.Title>
      <ToolTip.Body>
        ToolTip is a utility component to create a transient message anchored to another component. My direction is \"
        down
        \". My alignment is \"
        start
        \".
      </ToolTip.Body>
      <ToolTip.Target>
        <div>
          Target 
          down
           
          start
        </div>
      </ToolTip.Target>
    </ToolTip>
  </section>
  <section
    style={
      Object {
        "margin": "90px",
      }
    }>
    <ToolTip
      alignment="center"
      direction="down"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={true}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}>
      <ToolTip.Title>
        Title: 
        down
         
        center
      </ToolTip.Title>
      <ToolTip.Body>
        ToolTip is a utility component to create a transient message anchored to another component. My direction is \"
        down
        \". My alignment is \"
        center
        \".
      </ToolTip.Body>
      <ToolTip.Target>
        <div>
          Target 
          down
           
          center
        </div>
      </ToolTip.Target>
    </ToolTip>
  </section>
  <section
    style={
      Object {
        "margin": "90px",
      }
    }>
    <ToolTip
      alignment="end"
      direction="down"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={true}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}>
      <ToolTip.Title>
        Title: 
        down
         
        end
      </ToolTip.Title>
      <ToolTip.Body>
        ToolTip is a utility component to create a transient message anchored to another component. My direction is \"
        down
        \". My alignment is \"
        end
        \".
      </ToolTip.Body>
      <ToolTip.Target>
        <div>
          Target 
          down
           
          end
        </div>
      </ToolTip.Target>
    </ToolTip>
  </section>
  <section
    style={
      Object {
        "margin": "90px",
      }
    }>
    <ToolTip
      alignment="start"
      direction="left"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={true}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}>
      <ToolTip.Title>
        Title: 
        left
         
        start
      </ToolTip.Title>
      <ToolTip.Body>
        ToolTip is a utility component to create a transient message anchored to another component. My direction is \"
        left
        \". My alignment is \"
        start
        \".
      </ToolTip.Body>
      <ToolTip.Target>
        <div>
          Target 
          left
           
          start
        </div>
      </ToolTip.Target>
    </ToolTip>
  </section>
  <section
    style={
      Object {
        "margin": "90px",
      }
    }>
    <ToolTip
      alignment="center"
      direction="left"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={true}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}>
      <ToolTip.Title>
        Title: 
        left
         
        center
      </ToolTip.Title>
      <ToolTip.Body>
        ToolTip is a utility component to create a transient message anchored to another component. My direction is \"
        left
        \". My alignment is \"
        center
        \".
      </ToolTip.Body>
      <ToolTip.Target>
        <div>
          Target 
          left
           
          center
        </div>
      </ToolTip.Target>
    </ToolTip>
  </section>
  <section
    style={
      Object {
        "margin": "90px",
      }
    }>
    <ToolTip
      alignment="end"
      direction="left"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={true}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}>
      <ToolTip.Title>
        Title: 
        left
         
        end
      </ToolTip.Title>
      <ToolTip.Body>
        ToolTip is a utility component to create a transient message anchored to another component. My direction is \"
        left
        \". My alignment is \"
        end
        \".
      </ToolTip.Body>
      <ToolTip.Target>
        <div>
          Target 
          left
           
          end
        </div>
      </ToolTip.Target>
    </ToolTip>
  </section>
</section>
`;
